# freeclimber

./: .gitignore  ABOUT  CLAUDE.md  README.md  pyproject.toml
freeclimber/: __main__.py  actors.py  building.py  config.py  freeclimber.py  game.py  intro.py  menu.py  menu_old.py  weather.py
freeclimber/data/images/stages/testing/: staticenemy_plantilla.xcf
freeclimber/engine/: __init__.py  actions.py  collision.py  director.py  entity.py  font.py  node.py  particles.py  resources.py  scene.py
freeclimber/tests/: test_engine.py
